rättade till inlånslogiken, införde lånklass, lån sparas som json data, införde filtrering och sortering av media med streams